[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-langchain"
version = "0.3.0"
description = "Governance middleware for LangChain 1.0 agents — powered by axor-core compression engines"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["langchain", "langgraph", "agents", "governance", "token-optimization", "axor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langchain>=1.0.0",
    "langgraph>=1.0.0",
]

[project.optional-dependencies]
core      = ["axor-core>=0.2.0"]           # enables ContextCompressor + BudgetTracker
memory    = ["axor-memory-sqlite>=0.1.0"]  # cross-session memory
telemetry = ["axor-telemetry>=0.1.0"]      # anonymous opt-in classifier signals
dev       = ["pytest>=7.0", "pytest-asyncio"]
# tests/test_telemetry.py auto-skips when axor-telemetry is not installed
# (see pytest.importorskip at the top of that file). Install locally with
# `pip install -e ".[telemetry]" -e "../axor-telemetry"` for full coverage.

[tool.hatch.build.targets.wheel]
packages = ["axor_langchain"]
